force-app/main/default/objects/ARTL_VAN_AccountNumbers__c/ARTL_VAN_AccountNumbers__c.object-meta.xml
<CustomObject>
    <label>Virtual Account Number</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>VAN</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Virtual Account Numbers</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>