force-app/main/default/objects/ARTL_VAN_AccountNumbers__c/fields/ARTL_Active__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>