force-app/main/default/objects/ARTL_VAN_AccountNumbers__c/fields/ARTL_Bank__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Bank__c</fullName>
    <label>Bank</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>HDFC Bank</fullName>
            </value>
            <value>
                <fullName>Citibank</fullName>
            </value>
            <value>
                <fullName>Axis Bank</fullName>
            </value>
            <value>
                <fullName>Canara Bank</fullName>
            </value>
            <value>
                <fullName>A</fullName>
                <isActive>false</isActive>
                <label>A</label>
            </value>
            <value>
                <fullName>C</fullName>
                <isActive>false</isActive>
                <label>C</label>
            </value>
            <value>
                <fullName>H</fullName>
                <isActive>false</isActive>
                <label>H</label>
            </value>
            <value>
                <fullName>X</fullName>
                <isActive>false</isActive>
                <label>X</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>