force-app/main/default/objects/ARTL_VAN_AccountNumbers__c/fields/ARTL_Business_Account__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Business_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Business Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipName>VAN_Account_Numbers</relationshipName>
    <type>Lookup</type>
</CustomField>