force-app/main/default/objects/ARTL_VAN_AccountNumbers__c/fields/ARTL_Legal_Entity_Code__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Legal_Entity_Code__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Legal Entity Code</label>
    <length>15</length>
    <type>Text</type>
</CustomField>