force-app/main/default/objects/ARTL_VAN_AccountNumbers__c/fields/ARTL_Legal_Entity_Description__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Legal_Entity_Description__c</fullName>
    <label>Legal Entity Description</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Airtel Digital Limited</fullName>
            </value>
            <value>
                <fullName>Bharti Airtel Ltd</fullName>
            </value>
            <value>
                <fullName>Bharti Airtel Services Ltd</fullName>
            </value>
            <value>
                <fullName>Bharti Hexacom Limited</fullName>
            </value>
            <value>
                <fullName>NXTRA DATA LIMITED</fullName>
            </value>
            <value>
                <fullName>Indo Teleports Limited</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>