force-app/main/default/objects/ARTL_VAN_AccountNumbers__c/fields/ARTL_Legal_Entity_Name__c.field-meta.xml
<CustomField>
    <fullName>ARTL_Legal_Entity_Name__c</fullName>
    <label>Legal Entity Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AIDL</fullName>
            </value>
            <value>
                <fullName>ASCL</fullName>
            </value>
            <value>
                <fullName>BSCL</fullName>
            </value>
            <value>
                <fullName>HSCL</fullName>
            </value>
            <value>
                <fullName>NSCL</fullName>
            </value>
            <value>
                <fullName>TSCL</fullName>
            </value>
            <value>
                <fullName>BTEL</fullName>
            </value>
            <value>
                <fullName>BHEX</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>