force-app/main/default/objects/ARTL_VAN_AccountNumbers__c/fields/ARTL_PAN__c.field-meta.xml
<CustomField>
    <fullName>ARTL_PAN__c</fullName>
    <encryptionScheme>CaseInsensitiveDeterministicEncryption</encryptionScheme>
    <label>PAN</label>
    <length>15</length>
    <type>Text</type>
</CustomField>