force-app/main/default/objects/ARTL_VAN_AccountNumbers__c/fields/ARTL_VAN_Sequence__c.field-meta.xml
<CustomField>
    <fullName>ARTL_VAN_Sequence__c</fullName>
    <displayFormat>{0000000000}</displayFormat>
    <label>VAN Sequence</label>
    <type>AutoNumber</type>
</CustomField>