force-app/main/default/objects/ARTL_VAN_AccountNumbers__c/fields/Name__c.field-meta.xml
<CustomField>
    <fullName>Name__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Name</label>
    <length>16</length>
    <type>Text</type>
</CustomField>